# wordle-bot

./: README.md  main.py  pyproject.toml
src/: prompts.py  screen_capture.py  wordle_bot.py
